pequeño cambio de seo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>GTA 6 Countdown Timer - Time Until Release</title>
+    <title>GTA 6 Countdown Timer - Time Remaining Until Release</title>
     <meta name="description" content="Live countdown timer for GTA 6 release date. Track the exact time remaining in years, months, days, hours, minutes and seconds." />
 
     <link rel="icon" type="image/svg+xml" href="/vi.png" />
