google search console verification

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="nHdl-3rLd9T636eawsoPSDVD2mgR0jKJfhfh0tbfDqU" />
   </head>
   <body>
     <div id="root"></div>
